Lasagne page content added (image, recipe, method)

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -1,1 +1,41 @@
-<h1>Lasagne</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lasagne Recipe</title>
+</head>
+<body>
+    <h1>Lasagne</h1>
+
+    <img src="../images/lasagne.jpg">
+    <h3>Beef bolognese with a tomato and cream sauce, layered between pasta sheets</h3>
+    <h4>Ingredients:</h4>
+    <ul>
+        <li>500g beef mince</li>
+        <li>500g tinned tomatoes</li>
+        <li>3 cloves of garlic</li>
+        <li>Jar of cream sauce</li>
+        <li>Lasagne Sheets</li>
+        <li>1 onion - white</li>
+        <li>2 carrots</li>
+        <li>2 celery sticks</li>
+        <li>Herbs for flavour (oregano, basil)</li>
+        <li>Cheese (optional)</li>
+        <li>Garlic bread and salad (optional)</li>
+    </ul>
+    <h3>Method:</h3>
+    <ol>
+        <li>Pre-heat oven to 200C</li>
+        <li>Add oil to a pan, on a medium heat</li>
+        <li>Finely chop celery, carrots and onions and add to pan</li>
+        <li>Chop and add garlic</li>
+        <li>Once vegetables softened, add all the mince to the pan and cook until brown</li>
+        <li>Add the tinned tomatoes and simmer until mince is cooked</li>
+        <li>Get an overproof dish (large), add a layer of the bolognese to the dish, then a layer of cream, cover with a layer of lasagne.</li>
+        <li>Repeat the process until the desired amount of lasagne is reached</li>
+        <li>Cook in oven for 35-45 minutes, adding garlic bread halfway through</li>
+        <li>Serve & Enjoy!</li>
+    </ol>
+</body>
+</html>
