--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
-<body
-<h1>Odin Recipes</h1>
+<body>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/lasagne.html">Lasagne</a></li>
+        <li><a href="recipes/bacondoublecheeseburger.html">Bacon Double Cheeseburger</a></li>
+        <li><a href="recipes/chickencaesarsalad.html">Chicken & Bacon Caesar Salad</a></li>
+    </ul>
+
 </body>
 </html>
