--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>body {
+        background-color: #002c49;
+    }</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Odin Recipes</title>
 </head>
 <body>
+    <div class="h1">
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagne.html">Lasagne</a></li>
-        <li><a href="recipes/bacondoublecheeseburger.html">Bacon Double Cheeseburger</a></li>
-        <li><a href="recipes/chickencaesarsalad.html">Chicken & Bacon Caesar Salad</a></li>
-    </ul>
+    </div>
+        <div id="list">
+        <ul>
+            <li><a href="recipes/lasagne.html">Lasagne</a></li>
+            <li><a href="recipes/bacondoublecheeseburger.html">Bacon Double Cheeseburger</a></li>
+            <li><a href="recipes/chickencaesarsalad.html">Chicken & Bacon Caesar Salad</a></li>
+        </ul>
+        </div>
 
 </body>
 </html>
