--- a/recipes/bacondoublecheeseburger.html
+++ b/recipes/bacondoublecheeseburger.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>body {
-        background-color: #002c49;
-    }</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="recipes.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Bacon Double Cheeseburger Recipe</title>
 </head>
 
