--- a/recipes/chickencaesarsalad.html
+++ b/recipes/chickencaesarsalad.html
@@ -6,7 +6,7 @@
     }</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="recipes.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Chicken & Bacon Caesar Salad Recipe</title>
 </head>
 
